--- a/mod_2/css/mod_2_b.css
+++ b/mod_2/css/mod_2_b.css
@@ -6,7 +6,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color:  orange;
 }
 
 h1{
@@ -14,34 +13,36 @@ h1{
     font-style:  italic;
 }
 
-div{
+div,#container {
     background-color: #00FFFF;
+    position: relative;
+    top: 65px;
 }
 .box{
     padding:  10px 30px 10px 30px; /*top bottom left right*/
     border:  4px solid black;
     margin-top:  0px;
-    margin-right:  25px;
     width:  250px;
-    float:  left;
-}
-section{
-    clear:  left;
-    font-style:  italic;
-    font-weight:  800;
 }
 
 #p1 {
     background-color: #A52A2A;
+    position:  absolute;
 }
 #p2 {
     background-color: #DEB887;
+    position:  absolute;
+    top:  0px;
+    left: 325px;
 }
 #p3 {
     background-color: #5F9EA0;
+    position:  absolute;
+    left:  650px;
 }
 #p4{
     background-color:  #FFFFFF;
+    position:  absolute;
 }
 
 
